--- a/blackcode/src/app/home/development/development.component.html
+++ b/blackcode/src/app/home/development/development.component.html
@@ -66,7 +66,7 @@
               <p class="white">Tech Used-HTML, CSS, Bootstrap, jQuery, Javascript</p>
             </div>
             <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 pt-2 m-auto text-center">
-              <button type="submit" class="btn btn-outline-primary">Explore</button>
+              <button type="submit" class="btn btn-outline-primary" [routerLink]="['/animated']" >Explore</button>
             </div>
           </div>
           </div>
@@ -78,7 +78,10 @@
                 <p class="white">Tech Used-HTML, CSS, Bootstrap, jQuery, Javascript</p>
               </div>
               <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-xs-12 pt-2 m-auto text-center">
-                <button type="submit" class="btn btn-outline-primary">Explore</button>
+                <a href="https://www.eweyo.com/" target="_blank">
+                  <button type="submit" class="btn btn-outline-primary">  Explore</button>
+                 </a>
+
               </div>
             </div>
             </div>
