--- a/blackcode/src/app/home/home.component.html
+++ b/blackcode/src/app/home/home.component.html
@@ -8,14 +8,14 @@
 </div>
 
 <section>
-  <div class="row p-3">
+  <div class="row p-3 ">
     <div class="row m-auto">
       <h2 class="service"> SERVICES</h2>
     </div>
 
       <div class="row p-3">
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-10 col-xs-10 m-auto p-5">
-            <div class="card">
+            <div class="card" id="cardid">
               <img class="card-img-top img-fluid" src="../../assets/2.jpg" alt="Card image cap">
 
               <div class="card-text text-center">
@@ -25,7 +25,7 @@
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-10 col-xs-10 p-5 m-auto">
-            <div class="card">
+            <div class="card" id="cardid2">
               <img class="card-img-top img-fluid" src="../../assets/graphic.jpg" alt="Card image cap">
               <div class="card-text text-center">
                 <h2>Graphics Designing</h2>
@@ -34,7 +34,7 @@
             </div>
           </div>
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-10 col-xs-10 p-5 m-auto">
-            <div class="card">
+            <div class="card" id="cardid3">
               <img class="card-img-top img-fluid" src="../../assets/hero.jpg" alt="Card image cap">
               <div class="card-text text-center">
                 <h2> Video Editng</h2>
@@ -63,23 +63,23 @@
           </p>
         </div>
         <div class="col-lg-6 col-xl-6 col-md-6 col-sm-12 col-xs-12">
-          <div class="media pt-5">
+          <div class="media pt-5" id="dev">
             <img src="../../assets/dveloper.png" class="mr-2 icons img-fluid" alt="...">
             <div class="media-body">
               <h5 class="mt-0">BlackCode Developers</h5>
               We Have a Fully Experienced and expert team of Developers, Who build with the best technolgies are on trending.
             </div>
           </div>
-          <div class="media pt-5">
+          <div class="media pt-5" id="des">
             <img src="../../assets/designing.png" class="mr-2 icons img-fluid" alt="...">
             <div class="media-body">
               <h5 class="mt-0">BlackCode Designers</h5>
                 A Creative Team of Designers , They only focus on the design what you want.
             </div>
           </div>
-          <div class="media pt-5">
+          <div class="media pt-5" id="edit">
             <img src="../../assets/editor.png" class="mr-2 icons img-fluid" alt="...">
-            <div class="media-body">
+            <div class="media-body" >
               <h5 class="mt-0">BlackCode Editors</h5>
              A Team with Great Knowledge of Editing Videos According to your requirements,
              They Have experiences in film, short film, Documentry editing etc.
