--- a/blackcode/src/app/home/portfolio/portfolio.component.html
+++ b/blackcode/src/app/home/portfolio/portfolio.component.html
@@ -27,13 +27,13 @@
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-10 col-xs-10">
               <img src="../../../assets/devops.png"  class="img-fluid p-3"  alt="">
           </div>
-          <div class="row">
+          <div class="row m-auto">
             <div class="col-2"></div>
 
-            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-10 col-xs-10">
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-10 col-xs-10 ">
               <img src="../../../assets/mobile.png"  class="img-fluid p-3" alt="">
             </div>
-            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-10 col-xs-10">
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-10 col-xs-10 ">
               <img src="../../../assets/graphics.png" class="img-fluid p-3" alt="">
             </div>
             <div class="col-2"></div>
